# MHBench

./: LICENSE  README.md  main.py  pyproject.toml
ansible/: AnsiblePlaybook.py  AnsibleRunner.py  ansible_docker_runner.py  ansible_local_runner.py  ansible_runner.py  inventory  k8s-dynamic.yml
ansible/caldera/: InstallAttacker.py  __init__.py  install_attacker.yml  install_defender.yml
ansible/common/: __init__.py  checkFile.yml  testPlaybook.yml
ansible/defender/: DeployHoneyService.py  __init__.py
ansible/deployment_instance/: __init__.py
ansible/dev/: inventory.ini
ansible/enterprise/: join-AD.yml
ansible/goals/: __init__.py
ansible/inventories/: inventory.docker  inventory.mhbench-k8s.ini  inventory.mhbench-k8s.yml  k8s-dynamic-inventory.py
ansible/vulnerabilities/: SetupNetcatShell.py  __init__.py  sshAuthorizedKeysPersistence.yml  weakUserPassword.yml
config/: .gitignore  Config.py  config.py  config_example.json
docker/: build.sh  docker-compose.yml
docker/equifax/: .env_example
environment/: __init__.py  docker_env.py
environment/network/: Subnet.py
environment/openstack/: openstack_processor.py
environment/specifications/: chain.py  enterprise.py  enterprise_a.py  enterprise_b.py  equifax_medium.py  equifax_small.py  star.py
k8s/equifax/: README.md  attacker.yaml  database.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  webserver.yaml
src/: .gitignore  README.md  Result.py  __init__.py  credentials_example.tfvars  env_gen_deployer.py  environment.py  terraform_deployer.py  terraform_helpers.py
(+165 files in other folders)
