[project]
name = "mhbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=11.6.0",
    "ansible-runner>=2.4.1",
    "click>=8.2.1",
    "faker>=37.3.0",
    "kubernetes>=32.0.1",
    "openstacksdk>=4.5.0",
    "rich>=14.0.0",
]
